--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <div id="myDiv"></div>
-    
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+      </ul>
+      
 </body>
 </html>
