--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>SBA 316</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="myDiv"></div>
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-      </ul>
-      
+  <img src="HELLO WORLD.gif" id="top-gif">
+  <div class="centered-container">
+    <div id="gif-container" class="gif-frame">
+      <img src="HellowWorld.gif" id="centered-gif">
+    </div>
+  </div>
+
+  <div id="myDiv">Initial Content</div>
+
+  <ul>
+    <li>In today's reality</li>
+    <li>nothing new comes</li>
+    <li>from under</li>
+    <li>the sun</li>
+  </ul>
+
+  <button>Hover Over Me!</button>
+
+  <form id="myForm">
+    <input type="email" required>
+    <button type="submit">Submit</button>
+  </form>
+
+  <script src="script.js"></script>
 </body>
 </html>
