Flesh and Bones

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
 
   <ul>
     <li>In today's reality</li>
-    <li>nothing new comes</li>
-    <li>from under</li>
+    <li>nothing new</li>
+    <li>comes from under</li>
     <li>the sun</li>
   </ul>
 
-  <button>Hover Over Me!</button>
-
-  <form id="myForm">
-    <input type="email" required>
-    <button type="submit">Submit</button>
-  </form>
+  <div class="bottom-container">
+    <button id="hover-button">Soucie</button>
+    <form id="email-form">
+      <input type="email" placeholder="Enter your email" required>
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 
   <script src="script.js"></script>
 </body>
